# JobSentry

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: proxmox-setup.sh  sync-to-lxc.sh
src/jobsentry/: __init__.py  __main__.py  config.py
src/jobsentry/ai/: client.py  matcher.py
src/jobsentry/automation/: auto_apply.py  browser.py
src/jobsentry/cli/: app.py  jobs.py  notify.py  profile.py  schedule.py
src/jobsentry/db/: engine.py  repository.py  tables.py
src/jobsentry/models/: job.py  profile.py
src/jobsentry/notifications/: email.py  telegram.py
src/jobsentry/scrapers/: base.py  clearancejobs.py  indeed.py  linkedin.py  registry.py
tests/: test_smoke.py
