[project]
name = "jobsentry"
version = "0.1.0"
description = "AI-powered job discovery and matching for cleared defense/intelligence professionals"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.15.0",
    "anthropic>=0.52.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.8.0",
    "sqlalchemy>=2.0.40",
    "playwright>=1.52.0",
    "httpx>=0.28.0",
    "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.11.0",
]

[project.scripts]
jobsentry = "jobsentry.cli.app:app"

[tool.ruff]
target-version = "py311"
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobsentry"]
